Fixed layout bugs

--- a/assets/styles/descriptions.css
+++ b/assets/styles/descriptions.css
@@ -20,7 +20,7 @@
 
 .descriptionsContainer{
     position: relative;
-    height: 100%;
+    min-height: 100vh;
     padding: 100px;
     padding-right: 0;
     overflow-y: auto;
