--- a/assets/styles/menu.css
+++ b/assets/styles/menu.css
@@ -6,7 +6,7 @@
     left: -100%;
     align-items: center;
     float: left;
-    height: calc(100vh - 80px);
+    height: calc(100vh - 55px);
     min-width: 180px;
     font-family: 'concert one', Tahoma, sans-serif;
     box-sizing: border-box;
